<resources>
    <string name="app_name">Get.Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Get.Me</string>
    <string name="menu_event">Get.Me Events</string>
    <string name="menu_myprofile">My.Profile </string>
    <string name="menu_registerevent">Register Event </string>

    <string name="menu_howitworks">How It Works </string>
    <string name="menu_aboutgetme">About Get Me </string>


    <string name="home_second">Home Second</string>
    <string-array name="array_event_names">
            <item>Event 1</item>
        <item>Event 2</item>
        <item>Event 3</item>
        <item>Event 4</item>
    </string-array>
</resources>
