<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.theneem.getme.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>


    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.theneem.getme.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_Events"
        android:name="com.theneem.getme.ui.gallery.GalleryFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_Profile"
        android:name="com.theneem.getme.ui.profile.Profile"
        android:label="@string/menu_myprofile"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_eventresult"
        android:name="com.theneem.getme.ui.EventResult.EventResult"
        android:label="@string/menu_registerevent"
        tools:layout="@layout/event_result_fragment" />

    <fragment
        android:id="@+id/nav_howitworks"
        android:name="com.theneem.getme.ui.howitwork.HowItWorks"
        android:label="@string/menu_howitworks"
        tools:layout="@layout/how_it_works_fragment" />


    <fragment
        android:id="@+id/nav_aboutgetme"
        android:name="com.theneem.getme.ui.aboutgetme.AboutGetMe"
        android:label="@string/menu_myprofile"
        tools:layout="@layout/about_get_me_fragment" />




</navigation>